chore: mudando metadata

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 DATABASE_URL="mongodb+srv://elenciocalado:HsYiPSLmZJzevc4j@cluster0.6iwdq.mongodb.net/myDatabase?retryWrites=true&w=majority"
 
-
+NODE_ENV=development
 NEXTAUTH_SECRET="secret"
 NEXTAUTH_URL="http://localhost:3000"
 
