--- a/.env
+++ b/.env
@@ -1,18 +1,26 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mongodb+srv://elenciocalado:HsYiPSLmZJzevc4j@cluster0.6iwdq.mongodb.net/myDatabase?retryWrites=true&w=majority"
 
 NODE_ENV=development
-NEXTAUTH_SECRET="secret"
 NEXTAUTH_URL="http://localhost:3000"
 
+//Firebase
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCg3rdqM5-i11wGvWpLtQn4ps3T8VqdjfA
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=portal-dee53.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=portal-dee53
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=portal-dee53.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=512410954111
 NEXT_PUBLIC_FIREBASE_APP_ID=1:512410954111:web:532c17d8ff5443d6d1124a
+
+//Authentication Nodemailer
+
+EMAIL_FROM="elencio.dev.studio@gmail.com"
+EMAIL_SERVER_HOST="smtp.gmail.com"
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER="elencio.dev.studio@gmail.com"
+EMAIL_SERVER_PASSWORD="ptpk crcr qzwi xits"
+
+//Auth using Google OAuth
+
+AUTH_GOOGLE_ID="50286290111-maodnfa7n2orlmdo3f9v05g65osk0plv.apps.googleusercontent.com"
+AUTH_GOOGLE_SECRET="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"
+AUTH_SECRET="FbQcurUcNWQJVDvqRCV/+bDt7eITRh4Kk8BBLNtAlhw="
