--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.4.2",
-    "@auth/prisma-adapter": "^2.4.2",
+    "@auth/prisma-adapter": "^2.7.0",
+    "@clerk/nextjs": "^5.7.2",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -28,15 +30,17 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
     "@types/bcryptjs": "^2.4.6",
-    "axios": "^1.7.6",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.436.0",
     "mongodb": "^6.8.0",
     "next": "14.2.7",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.22",
+    "nodemailer": "^6.9.15",
     "pdfjs-dist": "^3.4.120",
     "react": "^18",
     "react-dom": "^18",
@@ -50,13 +54,15 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.19.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
