Atualizando os compoentes de auth

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="mongodb+srv://elenciocalado:HsYiPSLmZJzevc4j@cluster0.6iwdq.mongodb.net/myDatabase?retryWrites=true&w=majority"
 
 NODE_ENV=development
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://portal-estudante-jhcn.vercel.app/"
 
 //Firebase
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCg3rdqM5-i11wGvWpLtQn4ps3T8VqdjfA
