removendo autenticação usando google

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="mongodb+srv://elenciocalado:HsYiPSLmZJzevc4j@cluster0.6iwdq.mongodb.net/myDatabase?retryWrites=true&w=majority"
 
 NODE_ENV=development
-NEXTAUTH_URL="https://portal-estudante-jhcn.vercel.app/"
+NEXTAUTH_URL="http://localhost:3000"
 
 //Firebase
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCg3rdqM5-i11wGvWpLtQn4ps3T8VqdjfA
@@ -20,7 +20,7 @@ EMAIL_SERVER_USER="elencio.dev.studio@gmail.com"
 EMAIL_SERVER_PASSWORD="ptpk crcr qzwi xits"
 
 //Auth using Google OAuth
-
+//Blog Saber Mais
 AUTH_GOOGLE_ID="50286290111-maodnfa7n2orlmdo3f9v05g65osk0plv.apps.googleusercontent.com"
 AUTH_GOOGLE_SECRET="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"
 AUTH_SECRET="FbQcurUcNWQJVDvqRCV/+bDt7eITRh4Kk8BBLNtAlhw="
